--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.4.1",
-        "node-sass": "^4.9.1",
+        "node-sass": "^4.9.4",
         "redux-devtools-extension": "^2.13.5",
-        "sass-loader": "^7.0.3",
+        "sass-loader": "^7.1.0",
         "script-ext-html-webpack-plugin": "^2.0.1",
-        "webpack": "^4.12.0",
+        "style-loader": "^0.23.1",
+        "webpack": "^4.23.1",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.9"
     },
